fixing collapse reponsive scss

--- a/my-react-app/src/components/collapse/collapse.scss
+++ b/my-react-app/src/components/collapse/collapse.scss
@@ -5,6 +5,9 @@
 
     &--small{
     width: 48%;
+    @include smartphone-responsive {
+        width: 100%;
+    }
     }
 
     &__button {
